@@ -2,3 +2,4 @@ pytz>dev
 case>=1.5.2
 pytest
 pytest-sugar
+Pyro4
